[package]
name = "mockd"
version = "0.3.0"
edition = "2021"
authors = ["jerusdp <jrussell@jerus.ie>"]
rust-version = "1.56"
description = "Fake data generator library with 130+ functions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jerusdp/mockd"
keywords = ["fake", "data", "random", "generator", "faker"]

[features]
all = [
    "address",
    "company",
    "contact",
    "datetime",
    "file",
    "generator",
    "hacker",
    "hipster",
    "internet",
    "job",
    "language",
    "log-level",
    "misc",
    "name",
    "password",
    "payment",
    "person",
    "status-code",
    "unique",
    "user-agent",
    "vehicle",
    "words"
    ]
address = ["misc", "name"]
company = ["misc", "name"]
contact = ["misc", "internet"]
datetime =["misc", "chrono"]
file =["misc"]
generator =["misc", "person"]
hacker = ["misc", "generator", "contact"]
hipster = ["misc", "words"]
internet = ["misc", "person"]
job = ["misc", "company"]
language = ["misc"]
log-level = ["misc"]
misc = []
name = ["misc", "person"]
password = ["misc"]
payment = ["misc", "chrono"]
person = ["misc", "payment", "contact", "address"]
status-code = ["misc"]
unique = ["misc", "chrono", "uuid"]
user-agent = ["misc"]
vehicle = ["misc"]
words = ["misc", "company", "job", "name"]

[dependencies]
rand = "0.8.5"
libmath = "0.2.1"
chrono = { version = "0.4", optional = true }
uuid = { version = "1.0", features = ["v1", "v4"],  optional = true }
simplerand = "1.3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]