[workspace]
members = ["crates/mockd"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["jerusdp <jrussell@jerus.ie>"]
rust-version = "1.61"
repository = "https://github.com/jerus-org/mockd"

[workspace.dependencies]
libmath = "0.2.1"
chrono = "0.4.43"
uuid = { version = "1.19.0", features = ["v1", "v4"] }
simplerand = "1.6.0"
rand = "0.10.0"

[workspace.lints.clippy]
uninlined-format-args = "warn"
